fixed link alignment with temporary fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -68,7 +68,7 @@
 
 .linkSpacer-span {
   position: absolute;
-  top: 200px; }
+  top: -88px; }
 
 * {
   box-sizing: border-box;
