--- a/sass/base/About.sass
+++ b/sass/base/About.sass
@@ -25,9 +25,13 @@
 .contact
   background-image: url(../assets/pexels-photo.jpg)
 
+// parallax scrolling wouldnt allow links to
+// line up so the following is to align them
+// correctly with h3s as a temporary fix
+
 .linkSpacer-header
   position: relative
 
 .linkSpacer-span
   position: absolute
-  top: 200px
+  top: -88px
